로그인 페이지 추가

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
-  <link rel="stylesheet" href="/src/assets/css/vuetify.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <title>Cvnet ????</title>
 </head>
 
 <body>
   <div id="app">
   </div>
+  <!-- <script src="./src/assets/scripts/cvnet.js"></script> -->
   <!-- built files will be auto injected -->
   <script src="./dist/build.js"></script>
 </body>
