--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
   <div id="app">
   </div>
-  <!-- <script src="./src/assets/scripts/cvnet.js"></script> -->
   <!-- built files will be auto injected -->
   <script src="./dist/build.js"></script>
+  <!--<script src="/message/message_api.js"></script>-->
+  <!-- <script src="/javascript/common.js"></script> -->
 </body>
 
 </html>
